# admin-panel

./: .docker.env  .docker.env.example  .docker.env.template  .env.local  .env.local.template  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  Readme.md  db2.sqbpro  dev.docker-compose.yml  django.yml  docker-compose.override.yml  docker-compose.yaml  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: code-checker.yaml
config/: settings.py
config/components/: database.py
docker/: Dockerfile  docker-compose.yml
docker/django/: Dockerfile  entrypoint.sh
docker/nginx/: nginx.conf
docker/nginx/configs/: site.conf
movies/: admin.py  models.py
movies/locale/ru/LC_MESSAGES/: django.po
sqlite_to_postgres/: Dockerfile  config.py  extractor.py  load_data.py  models.py  saver.py
sqlite_to_postgres/tests/: conftest.py
sqlite_to_postgres/tests/check_consistency/: test_consistency.py
src/: .env.template
src/app/: manage.py
src/app/config/: settings.py  urls.py
src/app/config/components/: database.py
src/app/movies/: admin.py  enums.py  mixins.py
src/app/movies/locale/en/LC_MESSAGES/: django.po
src/app/movies/locale/ru/LC_MESSAGES/: django.po
src/app/movies/migrations/: 0001_initial.py  0002_filmwork_personfilmwork_genrefilmwork_and_more.py
src/app/movies/models/: __init__.py  base.py  mixins.py
src/doc/: generate.sql  movies.sql
src/script/sqlite_to_postgres/: load_data.py
src/script/sqlite_to_postgres/etl_movies/: logger.py  postgres_saver.py  settings.py  sqlite_loader.py
src/script/sqlite_to_postgres/etl_movies/dto/: base.py  film_work.py
src/tests/: conftest.py
src/tests/check_consistency/: convert.py  test_consistency.py  test_count.py
