[tool.poetry]
name = "movies-admin"
version = "0.1.0"
description = ""
authors = ["Орлов Ярослав <y.orlov@fonmix.ru>"]
readme = "README.md"
packages = [{include = "movies_admin"}]

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.1.1"
psycopg = {extras = ["binary"], version = "^3.2.1"}
django-split-settings = "^1.3.2"
black = "^24.8.0"
pydantic = {extras = ["settings"], version = "^2.10.3"}
pydantic-settings = "^2.6.1"
django = "^5.1.5"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
bandit = "^1.7.9"
mypy = "^1.11.2"
black = "^24.8.0"
flake8-bandit = "^4.1.1"
flake8-print = "^5.0.0"
flake8-broken-line = "^1.0.0"
flake8-bugbear = "^24.8.19"
flake8-pytest-style = "^2.0.0"
flake8-pyproject = "^1.2.3"
flake8 = "^7.1.1"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.flake8]
count = true
max-line-length = 120
max-complexity = 10
exclude = [".git", "__pycache__", ".mypy_cache", ".venv", "src/app/movies/migrations/*.py"]
per-file-ignores = [
    "src/app/movies/*/__init__.py: F401", # module imported but unused
    "src/app/movies/tests/*/*.py: S101", # use assert
]
ignore = [
    "S608", # hardcoded-sql-expression
]

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
